--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,15 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 
     defaultConfig {
         applicationId "com.example.teacherguesser"
@@ -44,9 +53,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    implementation "com.google.dagger:dagger:2.25.4"
-    kapt "com.google.dagger:dagger-compiler:2.25.4"
-    kaptTest "com.google.dagger:dagger-compiler:2.25.4"
-    kaptAndroidTest "com.google.dagger:dagger-compiler:2.25.4"
+    implementation "com.google.dagger:dagger:2.27"
+    kapt "com.google.dagger:dagger-compiler:2.27"
+    kaptTest "com.google.dagger:dagger-compiler:2.27"
+    kaptAndroidTest "com.google.dagger:dagger-compiler:2.27"
     compileOnly 'javax.annotation:jsr250-api:1.0'
 }
